refactor: move ServerInstructions to embedded resource
Extract the ~120-line markdown string literal from ServerInstructions.cs
into ServerInstructions.txt as an embedded resource. The text is loaded
once into a static readonly field at startup, eliminating per-call string
allocation. Uses .txt extension to avoid .dockerignore exclusion.

--- a/src/StashMcpServer/StashMcpServer.csproj
+++ b/src/StashMcpServer/StashMcpServer.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\lib\Bitbucket.Net\src\Bitbucket.Net\Bitbucket.Net.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="Services\ServerInstructions.txt" LogicalName="StashMcpServer.ServerInstructions.txt" />
+  </ItemGroup>
+
 </Project>
