--- a/tests/StashMcpServer.IntegrationTests/StashMcpServer.IntegrationTests.csproj
+++ b/tests/StashMcpServer.IntegrationTests/StashMcpServer.IntegrationTests.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="McpServerFactory" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit" />
     <PackageReference Include="xunit.runner.visualstudio">
@@ -24,7 +25,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\McpServerFactory\McpServerFactory.csproj" />
     <ProjectReference Include="..\..\src\StashMcpServer\StashMcpServer.csproj" />
   </ItemGroup>
 
